--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@ header{
 
 .section1{
 
-    background-image: url(/assets/background.png);
+    background-image: url(../assets/background.png);
     background-repeat: no-repeat;
     background-size: cover;
     height: 900px;
